@@ -1,6 +1,6 @@
 Authors of GNU Chess
 
-  Copyright (C) 2001-2011 Free Software Foundation, Inc.
+  Copyright (C) 2001-2013 Free Software Foundation, Inc.
 
   Copying and distribution of this file, with or without modification,
   are permitted in any medium without royalty provided the copyright
@@ -12,6 +12,7 @@ Free Software Foundation.  See also the ChangeLog and THANKS files.
 Antonio Ceballos <aceballos@gmail.com>
 Chua Kong Sian <kongsian@yahoo.com>
 David A. Wheeler <dwheeler@dwheeler.com>
+Elvis Vasconcelos <elvisvasc2@gmail.com>
 Fabien Letouzey <fabien_letouzey@hotmail.com>
 John Stanback <john@stanback.net>
 Lukas Geyer <lukas@debian.org>
